[2025-04-06][fix] MVC 객체에서 Reactive 객체로 변환